Required includes for Simulink

--- a/GAMs/SimulinkInterfaceGAM/Makefile.inc
+++ b/GAMs/SimulinkInterfaceGAM/Makefile.inc
@@ -46,7 +46,8 @@ INCLUDES += -ISimulinkHeaders
 
 
 all: $(OBJS) $(SUBPROJ) \
-	$(BUILD_DIR)/SimulinkInterfaceGAM$(DLLEXT)
+	$(BUILD_DIR)/SimulinkInterfaceGAM$(DLLEXT) \
+	$(BUILD_DIR)/rtw_capi_wrapper$(DLLEXT)
 	    echo  $(OBJS)
 
 include $(MAKEDEFAULTDIR)/MakeStdLibRules.$(TARGET)
