--- a/GAMs/PyGAM/Makefile.inc
+++ b/GAMs/PyGAM/Makefile.inc
@@ -44,13 +44,19 @@ INCLUDES += -I$(MARTe2_DIR)/Source/Core/Scheduler/L3Services
 INCLUDES += -I$(MARTe2_DIR)/Source/Core/Scheduler/L4Messages
 
 CPPFLAGS += -Wno-unused-function
+
+##############################################################
+####THE FOLLOWING DEFINITIONS MUST BE CHANGED IN ORDER TO ADAPT 
+####TO THE INSTALLED PYTHON (>=3.7)
 # Python header file folder
 INCLUDES += -I/opt/anaconda3/include/python3.7m/
 INCLUDES += -I/opt/anaconda3/lib/python3.7/site-packages/numpy/core/include/
-
-INCLUDES += 
 # Python interpreter folder
 PYINTERPRETER = /opt/anaconda3/pkgs/python-3.7.4-h265db76_1/lib/
+
+###############################################################
+
+
 
 # Linker flags requested by python3.7-config
 LIBRARIES += -L$(PYINTERPRETER) -lpython3.7m -lutil -Xlinker -export-dynamic
