More MARTe2 Components

--- a/Configurations/TankControl_marte_configuration.cfg
+++ b/Configurations/TankControl_marte_configuration.cfg
@@ -73,8 +73,8 @@ $TankControl = {
         NumberOfElements = 1
       }
       In2 = {
-        DataSource = MARTE_TANK_Output_DDB
-        Alias = "Output1"
+        DataSource = MARTE_IN_1_Output_Asynch
+        Alias = "Out1"
         Type = float64
         NumberOfDimensions = 0
         NumberOfElements = 1
@@ -141,51 +141,33 @@ $TankControl = {
       }
     }
   }
-  +MARTE_TANK = {
-    Class = SimulinkInterfaceGAM
-    ModelName = "Tank"
-   Parameters = {
-        B = 1.0
-   }
-    InputSignals = {
-      Input1 = {
-        DataSource = MARTE_PID_Output_DDB
-        Alias = "Output"
-        Type = float64
-        NumberOfDimensions = 0
-        NumberOfElements = 1
-      }
-    }
-    OutputSignals = {
-      Output1 = {
-        DataSource = MARTE_TANK_Output_DDB
-        Type = float64
-        NumberOfDimensions = 0
-        NumberOfElements = 1
-      }
-    }
-  }
-  +MARTE_TANK_TreeOutIOGAM = {
+  +MARTE_OUT_IOGAM = {
     Class = IOGAM
     InputSignals = {
       Time = {
-        DataSource = MARTE_EXPR_Timer_DDB
-        Type = uint32
+      DataSource = MARTE_EXPR_Timer_DDB
       }
-      Output1 = {
-        DataSource = MARTE_TANK_Output_DDB
+      Output = {
+        DataSource = MARTE_PID_Output_DDB
+        Type = float64
+        NumberOfDimensions = 0
+        NumberOfElements = 1
       }
     }
     OutputSignals = {
       Time = {
-        DataSource = MARTE_TANK_TreeOutput
-        Type = uint32
+        DataSource = MARTE_OUT
+        Type = int32
+        NumberOfDimensions = 0
+        NumberOfElements = 1
+        Channel = "CH1"
       }
-      Output1 = {
-        DataSource = MARTE_TANK_TreeOutput
+      Output = {
+        DataSource = MARTE_OUT
         Type = float64
         NumberOfDimensions = 0
         NumberOfElements = 1
+        Channel = "TANK_FLUX"
       }
     }
   }
@@ -213,11 +195,7 @@ $TankControl = {
       DataSource = Timings
       Type = uint32
     }
-    MARTE_TANK_ReadTime = {
-      DataSource = Timings
-      Type = uint32
-    }
-    MARTE_TANK_ExecTime = {
+    MARTE_OUT_IOGAM_WriteTime = {
       DataSource = Timings
       Type = uint32
     }
@@ -243,16 +221,70 @@ $TankControl = {
       DataSource = State_1_Thread_1_TIMES_WRITER
       Type = uint32
     }
-    MARTE_TANK_ReadTime = {
-      DataSource = State_1_Thread_1_TIMES_WRITER
-      Type = uint32
-    }
-    MARTE_TANK_ExecTime = {
+    MARTE_OUT_IOGAM_WriteTime = {
       DataSource = State_1_Thread_1_TIMES_WRITER
       Type = uint32
     }
   }
 }
+  +MARTE_IN_1_DDBOutIOGAM = {
+    Class = IOGAM
+    InputSignals = {
+      Out1 = {
+        DataSource = MARTE_IN_1
+        Samples = 1
+        Frequency = 100.0
+      }
+      Time = {
+        DataSource = MARTE_IN_1
+        Samples = 1
+      }
+    }
+    OutputSignals = {
+      Out1 = {
+        DataSource = MARTE_IN_1_Output_DDB
+        Type = float64
+        NumberOfDimensions = 0
+        NumberOfElements = 1
+      }
+      Time = {
+        DataSource = MARTE_IN_1_Output_DDB
+        Type = uint32
+        NumberOfDimensions = 0
+        NumberOfElements = 1
+      }
+    }
+  }
+  +MARTE_IN_1_TreeOutIOGAM = {
+    Class = IOGAM
+    InputSignals = {
+      Out1 = {
+        DataSource = MARTE_IN_1_Output_DDB
+      }
+    }
+    OutputSignals = {
+      Out1 = {
+        DataSource = MARTE_IN_1_TreeOutput
+        Type = float64
+        Samples = 1
+        NumberOfDimensions = 0
+        NumberOfElements = 1
+      }
+    }
+  }
+  +MARTE_IN_1_Output_Asynch_IOGAM = {
+    Class = IOGAM
+    InputSignals = {
+      Out1 = {
+        DataSource = MARTE_IN_1_Output_DDB
+      }
+    }
+    OutputSignals = {
+      Out1 = {
+        DataSource = MARTE_IN_1_Output_Asynch
+      }
+    }
+  }
  }
  +Data = {
   Class = ReferenceContainer
@@ -296,7 +328,7 @@ $TankControl = {
     Class = MDSReaderNS
     UseColumnOrder = 0
     TreeName = "MARTE"
-    ShotNumber = 1
+    ShotNumber = -1
     StartTime = 0
     Frequency = 100.0
     Signals = { 
@@ -324,7 +356,7 @@ $TankControl = {
     CPUMask = 15
     StackSize = 10000000
     TreeName = "MARTE"
-    PulseNumber = 1
+    PulseNumber = -1
     StoreOnTrigger = 0
     EventName = "MARTE_PIDUpdatejScope"
     TimeRefresh = 1
@@ -343,33 +375,26 @@ $TankControl = {
       }
     }
   }
-  +MARTE_TANK_Output_DDB = {
-    Class = GAMDataSource
-  }
-  +MARTE_TANK_TreeOutput = {
-    Class = MDSWriter
-    NumberOfBuffers = 20000
-    NumberOfPreTriggers = 0
-    NumberOfPostTriggers = 100
-    CPUMask = 15
+  +MARTE_OUT = {
+    Class = StreamOut
+    EventDivision = 1
+    TimeIdx = 0
+    TimeStreaming = 1
+    CpuMask = 15
     StackSize = 10000000
-    TreeName = "MARTE"
-    PulseNumber = 1
-    StoreOnTrigger = 0
-    EventName = "MARTE_TANKUpdatejScope"
-    TimeRefresh = 1
+    NumberOfBuffers = 10
     Signals = {
       Time = {
-        NodeName = "\MARTE::TOP:MARTE_TANK.OUTPUTS:OUT_TIME"
-        Period = 0.01
-        MakeSegmentAfterNWrites = 100
-        AutomaticSegmentation = 0
+        Type = int32
+        NumberOfDimensions = 0
+        NumberOfElements = 1
+        Channel = "CH1"
       }
-      Output1 = {
-        NodeName = "\MARTE::TOP:MARTE_TANK.OUTPUTS.OUTPUT1:VALUE"
-        Period = 0.01
-        MakeSegmentAfterNWrites = 100
-        AutomaticSegmentation = 0
+      Output = {
+        Type = float64
+        NumberOfDimensions = 0
+        NumberOfElements = 1
+        Channel = "TANK_FLUX"
       }
     }
   }
@@ -379,10 +404,10 @@ $TankControl = {
     CPUMask = 15
     StackSize = 10000000
     TreeName = "MARTE"
-    PulseNumber = 1
+    PulseNumber = -1
     StoreOnTrigger = 0
     TimeRefresh = 1
-        EventName = "MARTE_TANKUpdatejScope"
+        EventName = "MARTE_OUTUpdatejScope"
     Signals = {
     CycleTime = {
         NodeName = \MARTE::TOP:MARTE2.TIMES.STATE_1.THREAD_1:CYCLE
@@ -414,20 +439,62 @@ $TankControl = {
         MakeSegmentAfterNWrites = 100
         AutomaticSegmentation = 0
       }
-      MARTE_TANK_ReadTime = {
+      MARTE_OUT_IOGAM_WriteTime = {
         NodeName = \MARTE::TOP:MARTE2.TIMES.STATE_1.THREAD_1:GAM5
-        Period = 0.01
-        MakeSegmentAfterNWrites = 100
-        AutomaticSegmentation = 0
-      }
-      MARTE_TANK_ExecTime = {
-        NodeName = \MARTE::TOP:MARTE2.TIMES.STATE_1.THREAD_1:GAM6
         Period = 0.01
         MakeSegmentAfterNWrites = 100
         AutomaticSegmentation = 0
       }
     }
   }
+  +MARTE_IN_1 = {
+    Class = StreamIn
+    NumberOfBuffers = 100
+    CpuMask = 127
+    StackSize = 1000000
+    SynchronizingIdx = 0
+    Period = 0.01
+    Signals = {
+      Out1 = {
+        Type = float64
+        NumberOfDimensions = 0
+        NumberOfElements = 1
+        Channel = "TANK_LEVEL"
+      }
+      Time = {
+        Type = uint32
+        NumberOfDimensions = 0
+        NumberOfElements = 1
+      }
+    }
+  }
+  +MARTE_IN_1_TreeOutput = {
+    Class = MDSWriter
+    NumberOfBuffers = 20000
+    NumberOfPreTriggers = 0
+    NumberOfPostTriggers = 100
+    CPUMask = 15
+    StackSize = 10000000
+    TreeName = "MARTE"
+    PulseNumber = -1
+    StoreOnTrigger = 0
+    EventName = "MARTE_IN_1UpdatejScope"
+    TimeRefresh = 1
+    Signals = {
+      Out1 = {
+        NodeName = "\MARTE::TOP:MARTE_IN_1.OUTPUTS.OUT1:VALUE"
+        Period = 0.01
+       MakeSegmentAfterNWrites = 100
+        AutomaticSegmentation = 0
+      }
+    }
+  }
+  +MARTE_IN_1_Output_DDB = {
+    Class = GAMDataSource
+  }
+  +MARTE_IN_1_Output_Asynch = {
+    Class = RealTimeThreadAsyncBridge
+ }
   }
  +States = {
   Class = ReferenceContainer
@@ -448,7 +515,12 @@ $TankControl = {
     +Thread1 = {
       Class = RealTimeThread
       CPUs = 15
-      Functions = {MARTE_EXPRTimer_IOGAM MARTE_EXPR MARTE_PID MARTE_PID_TreeOutIOGAM MARTE_TANK MARTE_TANK_TreeOutIOGAM State_1_Thread_1_TIMES_IOGAM }
+      Functions = {MARTE_EXPRTimer_IOGAM MARTE_EXPR MARTE_PID MARTE_PID_TreeOutIOGAM MARTE_OUT_IOGAM State_1_Thread_1_TIMES_IOGAM }
+     }
+    +Thread2 = {
+      Class = RealTimeThread
+      CPUs = 15
+      Functions = {MARTE_IN_1_DDBOutIOGAM MARTE_IN_1_TreeOutIOGAM MARTE_IN_1_Output_Asynch_IOGAM }
      }
    }
   }
