Fix nmber of channels

--- a/DataSources/mcc118/Makefile.linux
+++ b/DataSources/mcc118/Makefile.linux
@@ -25,5 +25,7 @@
 #############################################################
 
 TARGET=x86-linux
+CPPFLAGS+=-fPIC
+EMULATE_FLAGS = -DMCC_EMULATE
 
 include Makefile.inc
