--- a/DataSources/mcc118/Makefile.hw.arm8-linux
+++ b/DataSources/mcc118/Makefile.hw.arm8-linux
@@ -29,6 +29,6 @@
 export TARGET=armv8-linux
 
 HW_INCLUDES = /home/pi/daqhats/examples/c
-HW_LIBS = "-L/home/pi/daqhats/lib -ldaqhats"
+LIBRARIES +=  "-L/home/pi/daqhats/lib/build/ -ldaqhats"
 
 include Makefile.inc
