--- a/GAMs/PyGAM/Makefile.inc
+++ b/GAMs/PyGAM/Makefile.inc
@@ -49,17 +49,17 @@ CPPFLAGS += -Wno-unused-function
 ####THE FOLLOWING DEFINITIONS MUST BE CHANGED IN ORDER TO ADAPT 
 ####TO THE INSTALLED PYTHON (>=3.7)
 # Python header file folder
-INCLUDES += -I/opt/anaconda3/include/python3.7m/
-INCLUDES += -I/opt/anaconda3/lib/python3.7/site-packages/numpy/core/include/
+INCLUDES += -I/usr/include/python3.9/
+INCLUDES += -I/usr/local/lib64/python3.9/site-packages/numpy/core/include
 # Python interpreter folder
-PYINTERPRETER = /opt/anaconda3/pkgs/python-3.7.4-h265db76_1/lib/
+PYINTERPRETER =
 
 ###############################################################
 
 
 
 # Linker flags requested by python3.7-config
-LIBRARIES += -L$(PYINTERPRETER) -lpython3.7m -lutil -Xlinker -export-dynamic
+LIBRARIES += -L$(PYINTERPRETER) -lpython3.9 -lutil -Xlinker -export-dynamic
 
 all: $(OBJS) $(SUBPROJ) \
 	$(BUILD_DIR)/PyGAM$(DLLEXT)
