--- a/GAMs/PyGAM/Makefile.inc
+++ b/GAMs/PyGAM/Makefile.inc
@@ -71,7 +71,7 @@ include $(MAKEDEFAULTDIR)/MakeStdLibRules.$(TARGET)
 jcp: jccppex
 
 %.o: %.cc
-	g++ $(INCLUDES) $(CXXFLAGS) -c -o $@ $<
+	g++ $(INCLUDES) $(CPPFLAGS) $(CXXFLAGS) -c -o $@ $<
 
 jccppex: jcppmain.o
 	g++ $(LDFLAGS) -o jcppex $< $(LDLIBS) $(LIBRARIES)
