switch to fPIC, which seems to clear that hurdle
but is still not compatible with -pie at the bottom

--- a/GAMs/PyGAM/Makefile-jcpp
+++ b/GAMs/PyGAM/Makefile-jcpp
@@ -1,6 +1,6 @@
 JAX_DIR = /tmp/jbazeloutput
 
-CPPFLAGS += -fPIE -std=c++17
+CPPFLAGS += -fPIC -std=c++17
 INCLUDES += -I/usr/local/lib64/python3.9/site-packages/jaxlib
 LIBRARIES += -L/usr/local/lib64/python3.9/site-packages/jaxlib -lstdc++
 
