a few didn't need rename

--- a/GAMs/PyGAM/Makefile-jcpp
+++ b/GAMs/PyGAM/Makefile-jcpp
@@ -110,7 +110,7 @@ LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/
 LIBRARIES += -Wl,-no-whole-archive
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/tsl/tsl/cuda/libcurand_stub.pic.a
 LIBRARIES += -Wl,-whole-archive
-LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/jaxlib/cuda/libcuda_gpu_kernels.pic.lo
+LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/jaxlib/cuda/libcuda_gpu_kernels.lo
 LIBRARIES += -Wl,-no-whole-archive
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/jaxlib/cuda/libcublas_kernels.pic.a
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/jaxlib/cuda/libcuda_lu_pivot_kernels.pic.a
@@ -549,7 +549,7 @@ LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/service/librendezvous.pic.a
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/nccl_archive/libnccl.pic.a
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/nccl_archive/libenqueue.pic.a
-LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/nccl_archive/libdevice_merged.pic.a
+LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/nccl_archive/libdevice_merged.a
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/nccl_archive/libnet.pic.a
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/service/gpu/runtime/libconv_reorder.pic.a
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/service/gpu/runtime/libcublas_lt_matmul.pic.a
@@ -954,9 +954,9 @@ LIBRARIES += -Wl,-whole-archive
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/tsl/tsl/profiler/utils/libtime_utils_impl.pic.lo
 LIBRARIES += -Wl,-no-whole-archive
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/stream_executor/libscratch_allocator.pic.a
-LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/tools/libhlo_module_loader.pic.a
+LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/tools/libhlo_module_loader.a
 LIBRARIES += -Wl,-whole-archive
-LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/tools/librun_hlo_module_proto_cc_impl.pic.lo
+LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/tools/librun_hlo_module_proto_cc_impl.lo
 LIBRARIES += -Wl,-no-whole-archive
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/service/libhlo_parser.pic.a
 LIBRARIES += $(JAX_DIR)/execroot/__main__/bazel-out/k8-opt/bin/external/xla/xla/service/libshape_inference.pic.a
