add back in the rest of the LDLIBS
we now have the full Makefile as needed/was in jcppex

--- a/GAMs/PyGAM/Makefile-jcpp
+++ b/GAMs/PyGAM/Makefile-jcpp
@@ -1249,3 +1249,8 @@ LIBRARIES += -pthread
 LIBRARIES += -pthread
 LIBRARIES += -pthread
 LIBRARIES += -pthread
+LDLIBS += -pie
+LDLIBS += -Wl,-z,relro,-z,now
+LDLIBS += -Wl,--gc-sections
+LDLIBS += -Wl,--build-id=md5
+LDLIBS += -Wl,--hash-style=gnu
